# Retermina

./: .claudeignore  CLAUDE.md  README.md  RELEASING.md  index.html  package-lock.json  package.json  retermina.html  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/: ROADMAP.md
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_stats.rs  fonts.rs  fs.rs  iris.rs  lib.rs  localhost.rs  main.rs  presets.rs  pty.rs  terminal_import.rs  vscode.rs
src/components/: BrowseLooms.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContentSearch.tsx  FileSearch.tsx  FloatingMenu.tsx  Icon.tsx  LoomManager.tsx  LoomPreview.tsx  SettingsModal.tsx  ShortcutsCheatSheet.tsx  ThemeSwitcher.tsx  TitleBar.tsx  Toaster.tsx  UpdateBanner.tsx  WorkspaceGrid.tsx
src/hooks/: useFocusTrap.ts  useTauriFileDrop.ts
src/lib/: claudeBus.ts  diff.test.ts  diff.ts  fontRegistry.ts  fonts.ts  format.test.ts  format.ts  fs.ts  gitDiff.ts  gradient.test.ts  gradient.ts  gridCollision.test.ts  gridCollision.ts  highlight.tsx  iris.test.ts  iris.ts  keybindings.ts  markdown.tsx  marketplace.ts  motion.ts  preset.test.ts  preset.ts  previewWindow.ts  pty.ts  recentWorkspaces.ts  system.ts  tauri.ts  terminalBus.ts  terminalImport.ts  theme.test.ts  theme.ts  themePreview.ts  workspaceLayout.test.ts  workspaceLayout.ts
src/store/: app.ts  editor.ts  keybindings.ts  loom.ts  macros.ts  presets.ts  recent.ts  scheduledPrompts.ts  session.ts  toast.ts  updater.ts  (+3 more)
(+32 files in other folders)
