[package]
name = "retermina"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "retermina_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
# Self-update flow exposed by the Version tab in Settings.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native save/open file dialogs for Retermina Loom preset export/import.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Read the VSCode/Cursor SQLite history DB (bundled = compile SQLite from source,
# no system libsqlite dependency).
rusqlite = { version = "0.32", features = ["bundled"] }
# Cross-platform per-user config directory (Application Support / %APPDATA% / .config).
dirs = "5"
# Percent-decoding for file:// URIs stored by VSCode.
urlencoding = "2"
# Cross-platform pseudo-terminal management for the native shell backend.
portable-pty = "0.8"
# Encode raw PTY bytes for safe transport to the webview.
base64 = "0.22"

